# variable_autonomy_utilities

./: README.md
loa_switcher/: CMakeLists.txt  package.xml
loa_switcher/launch/: loa_switcher_launch.py
loa_switcher/src/: loa_switcher_node.cpp
teleop_loa/: CMakeLists.txt  package.xml
teleop_loa/launch/: teleop_loa.launch
teleop_loa/src/: teleop_loa.cpp
teleop_mobile_robot/: CMakeLists.txt  README.md  package.xml
teleop_mobile_robot/launch/: teleop_mobile_robot_launch.py
teleop_mobile_robot/src/: teleop_mobile_robot_node.cpp
