<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loa_switcher</name>
  <version>1.0.0</version>
  <description>Package for switching between different Levels of Autonomy. This is not an arbitration, only implimentes on the implimentation/practical level the LoA switches that agents/arbitrators decide.</description>
  <maintainer email="m.chiou@bham.ac.uk">manolis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend>  
  <depend>actionlib_msgs</depend>  

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
