<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_mobile_robot</name>
  <version>0.0.0</version>
  <description>Teleoperation node for mobile robots. Can be costumized to include Level of Autonomy (LoA) switches</description>
  <maintainer email="m.chiou@bham.ac.uk">manolis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend>  
  <depend>sensor_msgs</depend>  

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
